Sandbox0/ActivitySheetsHideActivitiesCloaky/errs.txt
ld: warning: -multiply_defined is obsolete
warning: no debug symbols in executable (-arch arm64e)
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/strip: warning: input object file already stripped: /Users/az/Desktop/sinfool/Sandbox0/ActivitySheetsHideActivitiesCloaky/.theos/obj/arm64e/ActivitySheetsHideActivitiesCloaky.dylib
[1mTweak.xm:83:1: [0m[0;1;31merror: [0m[1mnon-void function does not return a value [-Werror,-Wreturn-type][0m
}
[0;1;32m^
[0m1 error generated.
make[3]: *** [/Users/az/theos/makefiles/instance/rules.mk:313: /Users/az/Desktop/sinfool/Sandbox0/ActivitySheetsHideActivitiesCloaky/.theos/obj/arm64/Tweak.mm.1a2c34f4.o] Error 1
make[2]: *** [/Users/az/theos/makefiles/instance/library.mk:51: /Users/az/Desktop/sinfool/Sandbox0/ActivitySheetsHideActivitiesCloaky/.theos/obj/arm64/ActivitySheetsHideActivitiesCloaky.dylib] Error 2
make[1]: *** [/Users/az/theos/makefiles/instance/library.mk:37: internal-library-all_] Error 2
make: *** [/Users/az/theos/makefiles/master/rules.mk:146: ActivitySheetsHideActivitiesCloaky.all.tweak.variables] Error 2
